WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213974
[iOS] La Banque Postale app does not respect safe area insets on iOS 14
https://bugs.webkit.org/show_bug.cgi?id=213974
Summary
[iOS] La Banque Postale app does not respect safe area insets on iOS 14
Andy Estes
Reported
2020-07-05 11:27:36 PDT
[iOS] La Banque Postale app does not respect safe area insets on iOS 14
Attachments
Patch
(14.86 KB, patch)
2020-07-05 11:32 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-07-05 11:28:02 PDT
rdar://problem/65109197
Andy Estes
Comment 2
2020-07-05 11:32:20 PDT
Created
attachment 403559
[details]
Patch
Darin Adler
Comment 3
2020-07-05 13:34:55 PDT
Comment on
attachment 403559
[details]
Patch Wow, really going above and beyond to keep them working -- seems like they went out of their way to ensure their app breaks every time we bump the iOS version number!
EWS
Comment 4
2020-07-05 16:06:26 PDT
Committed
r263956
: <
https://trac.webkit.org/changeset/263956
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403559
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug