Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -107,6 +107,7 @@ WEBCORE_EXPORT bool isStocks();
 WEBCORE_EXPORT bool isFeedly();
 WEBCORE_EXPORT bool isPocketCity();
 WEBCORE_EXPORT bool isEssentialSkeleton();
+WEBCORE_EXPORT bool isLaBanquePostale();
 
 } // IOSApplication
 
